# number_recognition

./: CONFIG.yaml  Jenkinsfile  README.md  setup.cfg  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
models/: model_20230823_152649.h5
notebooks/: 1.0-number_recognition_start.ipynb
number_recognition/: config.py
number_recognition/dataset/: make_dataset.py
number_recognition/features/: build_features.py
number_recognition/models/: api.py  model_utils.py
number_recognition/tests/: test_unit_model.py
number_recognition/visualization/: visualize.py
