# -*- coding: utf-8 -*-
[metadata]
name = number_recognition
summary = number recognition
description-file =
    README.md
author = MicroStep-MIS
author-email = peter.sisan@microstep-mis.com
version = 0.0.1
license = No license file
home-page = https://github.com/MicroStep-MIS/number_recognition
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    number_recognition

[entry_points]
deepaas.v2.model =
    number_recognition = number_recognition.models.api
